--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -47,6 +47,7 @@ DdrawOverrideBitMode       = 0
 AutoFrameSkip              = 0
 DdrawEmulateSurface        = 0
 DdrawRemoveScanlines       = 0
+DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawLimitDisplayModeCount = 0
