--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -60,9 +60,11 @@ DirectShowEmulation        = 0
 AutoFrameSkip              = 0
 DdrawEmulateSurface        = 0
 DdrawRemoveScanlines       = 0
+DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawLimitDisplayModeCount = 0
+DdrawUseDirect3D9Ex        = 0
 DdrawUseNativeResolution   = 0
 DdrawClippedWidth          = 0
 DdrawClippedHeight         = 0
