--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -51,6 +51,7 @@ DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawLimitDisplayModeCount = 0
+DdrawUseDirect3D9Ex        = 0
 DdrawUseNativeResolution   = 0
 DdrawClippedWidth          = 0
 DdrawClippedHeight         = 0
