--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -59,6 +59,7 @@ DdrawOverrideHeight        = 0
 DdrawOverrideRefreshRate   = 0
 DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
+DdrawUseDirect3D9Ex        = 0
 
 [d3d9]
 AnisotropicFiltering       = 0
