--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -95,6 +95,9 @@
     <Filter Include="External\MemoryModule">
       <UniqueIdentifier>{7ad4b754-a938-4e96-a831-dcea6c8f1f03}</UniqueIdentifier>
     </Filter>
+    <Filter Include="d3dddi">
+      <UniqueIdentifier>{120d0136-d207-48f0-b78f-8f22921a8836}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libraries\dwmapi.cpp">
@@ -876,6 +879,9 @@
     </ClCompile>
     <ClCompile Include="External\MemoryModule\MemoryModule.c">
       <Filter>External\MemoryModule</Filter>
+    </ClCompile>
+    <ClCompile Include="D3DDDI\d3dddi.cpp">
+      <Filter>d3dddi</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1852,6 +1858,9 @@
     </ClInclude>
     <ClInclude Include="External\MemoryModule\MemoryModule.h">
       <Filter>External\MemoryModule</Filter>
+    </ClInclude>
+    <ClInclude Include="D3DDDI\d3dddiExternal.h">
+      <Filter>d3dddi</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
