--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -70,6 +70,7 @@ DdrawClippedHeight         = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
 DdrawOverrideRefreshRate   = 0
+DdrawOverrideStencilFormat = 0
 DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
 
