Fix disable lighting and a couple typos

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -73,6 +73,13 @@ DdrawOverrideRefreshRate   = 0
 DdrawOverrideStencilFormat = 0
 DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
+DdrawConvertHomogeneousW                    = 0
+DdrawConvertHomogeneousToWorld              = 0
+DdrawConvertHomogeneousToWorldUseGameCamera = 0
+DdrawConvertHomogeneousToWorldFOV           = 90.0f
+DdrawConvertHomogeneousToWorldNearPlane     = 1.0f
+DdrawConvertHomogeneousToWorldFarPlane      = 1000.0f
+DdrawConvertHomogeneousToWorldDepthOffset   = 0.0f
 
 [d3d9]
 AnisotropicFiltering       = 0
