Set transform if not set by game

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -73,6 +73,7 @@ DdrawOverrideRefreshRate   = 0
 DdrawOverrideStencilFormat = 0
 DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
+DdrawDisableLighting       = 0
 DdrawConvertHomogeneousW                    = 0
 DdrawConvertHomogeneousToWorld              = 0
 DdrawConvertHomogeneousToWorldUseGameCamera = 0
