--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -77,10 +77,10 @@ DdrawDisableLighting       = 0
 DdrawConvertHomogeneousW                    = 0
 DdrawConvertHomogeneousToWorld              = 0
 DdrawConvertHomogeneousToWorldUseGameCamera = 0
-DdrawConvertHomogeneousToWorldFOV           = 90.0f
-DdrawConvertHomogeneousToWorldNearPlane     = 1.0f
-DdrawConvertHomogeneousToWorldFarPlane      = 1000.0f
-DdrawConvertHomogeneousToWorldDepthOffset   = 0.0f
+DdrawConvertHomogeneousToWorldFOV           = 90.0
+DdrawConvertHomogeneousToWorldNearPlane     = 1.0
+DdrawConvertHomogeneousToWorldFarPlane      = 1000.0
+DdrawConvertHomogeneousToWorldDepthOffset   = 0.0
 
 [d3d9]
 AnisotropicFiltering       = 0
