--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -79,14 +79,17 @@ AnisotropicFiltering       = 0
 AntiAliasing               = 0
 CacheClipPlane             = 0
 EnableVSync                = 0
+ForceVsyncMode             = 0
 EnableWindowMode           = 0
-ForceDirect3D9On12         = 0
+WindowModeBorder           = 0
+SetInitialWindowPosition   = 0
+InitialWindowPositionLeft  = 0
+InitialWindowPositionTop   = 0
+FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
-ForceVsyncMode             = 0
-FullscreenWindowMode       = 0
-WindowModeBorder           = 0
+ForceDirect3D9On12         = 0
 GraphicsHybridAdapter      = 0
 
 [FullScreen]
