--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -64,13 +64,16 @@ DdrawMaintainAspectRatio   = 0
 AnisotropicFiltering       = 0
 AntiAliasing               = 0
 EnableVSync                = 0
+ForceVsyncMode             = 0
 EnableWindowMode           = 0
+WindowModeBorder           = 0
+SetInitialWindowPosition   = 0
+InitialWindowPositionLeft  = 0
+InitialWindowPositionTop   = 0
+FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
-ForceVsyncMode             = 0
-FullscreenWindowMode       = 0
-WindowModeBorder           = 0
 
 [FullScreen]
 FullScreen                 = 0
