Reorganize vertex handling

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -63,6 +63,7 @@ DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
+DdrawEnableMouseHook       = 0
 DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
 DdrawClippedWidth          = 0
