--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -70,6 +70,8 @@ DdrawClippedWidth          = 0
 DdrawClippedHeight         = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
+DdrawOverridePrimaryWidth  = 0
+DdrawOverridePrimaryHeight = 0
 DdrawOverrideRefreshRate   = 0
 DdrawOverrideStencilFormat = 0
 DdrawIntegerScalingClamp   = 0
