--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -568,7 +568,6 @@ cmd /q /c "cd /D ""$(ProjectDir)d3d8\"" &amp;&amp; del build.bat"</Command>
     <ClInclude Include="DDrawCompat\v0.3.1\Win32\Registry.h" />
     <ClInclude Include="DDrawCompat\v0.3.1\Win32\WaitFunctions.h" />
     <ClInclude Include="ddraw\AddressLookupTable.h" />
-    <ClInclude Include="ddraw\d3d9ShaderPalette.h" />
     <ClInclude Include="ddraw\ddraw.h" />
     <ClInclude Include="ddraw\ddrawExternal.h" />
     <ClInclude Include="ddraw\DebugOverlay.h" />
@@ -589,6 +588,8 @@ cmd /q /c "cd /D ""$(ProjectDir)d3d8\"" &amp;&amp; del build.bat"</Command>
     <ClInclude Include="ddraw\IDirectDrawGammaControl.h" />
     <ClInclude Include="ddraw\IDirectDrawPalette.h" />
     <ClInclude Include="ddraw\IDirectDrawX.h" />
+    <ClInclude Include="ddraw\Shaders\ColorKeyShader.h" />
+    <ClInclude Include="ddraw\Shaders\PaletteShader.h" />
     <ClInclude Include="ddraw\Versions\IDirect3D.h" />
     <ClInclude Include="ddraw\Versions\IDirect3D2.h" />
     <ClInclude Include="ddraw\Versions\IDirect3D3.h" />
