--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -695,6 +695,7 @@ cmd /q /c "cd /D ""$(ProjectDir)d3d8\"" &amp;&amp; del build.bat"</Command>
     <ClInclude Include="Settings\Settings.h" />
     <ClInclude Include="Utils\Utils.h" />
     <ClInclude Include="Wrappers\bcrypt.h" />
+    <ClInclude Include="Wrappers\cryptbase.h" />
     <ClInclude Include="Wrappers\cryptsp.h" />
     <ClInclude Include="Wrappers\d2d1.h" />
     <ClInclude Include="Wrappers\d3d8.h" />
@@ -712,6 +713,7 @@ cmd /q /c "cd /D ""$(ProjectDir)d3d8\"" &amp;&amp; del build.bat"</Command>
     <ClInclude Include="Wrappers\version.h" />
     <ClInclude Include="Wrappers\wininet.h" />
     <ClInclude Include="Wrappers\winmm.h" />
+    <ClInclude Include="Wrappers\winspool.h" />
     <ClInclude Include="Wrappers\wrapper.h" />
     <ClInclude Include="Wrappers\wsock32.h" />
   </ItemGroup>
