--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -1877,6 +1877,12 @@
     <ClInclude Include="ddraw\Shaders\ColorKeyShader.h">
       <Filter>ddraw\Shaders</Filter>
     </ClInclude>
+    <ClInclude Include="Wrappers\cryptbase.h">
+      <Filter>Wrappers</Filter>
+    </ClInclude>
+    <ClInclude Include="Wrappers\winspool.h">
+      <Filter>Wrappers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Dllmain\BuildNo.rc">
