Allow overriding refresh rate for Direct3D9

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -72,7 +72,6 @@ DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
 DdrawOverridePrimaryWidth  = 0
 DdrawOverridePrimaryHeight = 0
-DdrawOverrideRefreshRate   = 0
 DdrawOverrideStencilFormat = 0
 DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
@@ -83,6 +82,7 @@ AntiAliasing               = 0
 CacheClipPlane             = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
+OverrideRefreshRate        = 0
 EnableWindowMode           = 0
 WindowModeBorder           = 0
 SetInitialWindowPosition   = 0
