--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -54,7 +54,6 @@ DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
-DdrawOverrideRefreshRate   = 0
 DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
 
@@ -63,6 +62,7 @@ AnisotropicFiltering       = 0
 AntiAliasing               = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
+OverrideRefreshRate        = 0
 EnableWindowMode           = 0
 WindowModeBorder           = 0
 SetInitialWindowPosition   = 0
