Add a per frame delay option
https://github.com/elishacloud/dinputto8/issues/20

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -83,6 +83,7 @@ CacheClipPlane             = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
 OverrideRefreshRate        = 0
+LimitPerFrameFPS           = 0
 EnableWindowMode           = 0
 WindowModeBorder           = 0
 SetInitialWindowPosition   = 0
