--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -63,6 +63,7 @@ AntiAliasing               = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
 OverrideRefreshRate        = 0
+LimitPerFrameFPS           = 0
 EnableWindowMode           = 0
 WindowModeBorder           = 0
 SetInitialWindowPosition   = 0
