--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -56,7 +56,7 @@ DdrawResolutionHack        = 0
 DirectShowEmulation        = 0
 
 [Dd7to9]
-AutoFrameSkip              = 0
+DdrawAutoFrameSkip         = 0
 DdrawEmulateSurface        = 0
 DdrawFixByteAlignment      = 0
 DdrawRemoveScanlines       = 0
