--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -43,7 +43,7 @@ ConvertToDirect3D7         = 0
 DdrawOverrideBitMode       = 0
 
 [Dd7to9]
-AutoFrameSkip              = 0
+DdrawAutoFrameSkip         = 0
 DdrawEmulateSurface        = 0
 DdrawFixByteAlignment      = 0
 DdrawRemoveScanlines       = 0
