--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -73,6 +73,8 @@ FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
+ForceDirect3D9On12         = 0
+GraphicsHybridAdapter      = 0
 
 [FullScreen]
 FullScreen                 = 0
