Add DdrawDelayDeviceCreation option

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -64,6 +64,7 @@ DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawEnableMouseHook       = 0
+DdrawDelayDeviceCreation   = 0
 DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
 DdrawClippedWidth          = 0
