Add option to disable Direct3D caps

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -65,6 +65,7 @@ DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawEnableMouseHook       = 0
 DdrawDelayDeviceCreation   = 0
+DdrawDisableDirect3DCaps   = 0
 DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
 DdrawClippedWidth          = 0
