--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -50,6 +50,7 @@ DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
+DdrawDisableDirect3DCaps   = 0
 DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
 DdrawOverrideWidth         = 0
