--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -64,7 +64,7 @@ DdrawRemoveInterlacing     = 0
 DdrawReadFromGDI           = 0
 DdrawWriteToGDI            = 0
 DdrawEnableMouseHook       = 0
-DdrawDelayDeviceCreation   = 0
+DdrawCreateDeviceEarly     = 0
 DdrawDisableDirect3DCaps   = 0
 DdrawLimitDisplayModeCount = 0
 DdrawUseNativeResolution   = 0
